fixed strange movement in hover on nav menu. need to fix z-index next

--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -19,6 +19,9 @@ body {
   align-items: center;
   justify-content: center;
 }
+.demo-toggle-title {
+  margin-top: 0.5rem;
+}
 
 // taylor greeting logo
 .taylor-greeting-img {
@@ -34,9 +37,6 @@ body {
   position: relative;
   top: 1em;
   text-align: center;
-}
-.top-bar, .top-bar ul {
-    background-color: transparent;
 }
 
 // Top bar nav inline to right
@@ -56,39 +56,11 @@ body {
 }
 .clearfix {
   display: block;
+  position: fixed;
 }
 
-// nav {
-//   font-family: $body;
-//   font-size: 1.1rem;
-//   position: fixed;
-//   z-index: 100;
-//   top: 0;
-//   left: 0;
-//   right: 0;
-//   background-color: rgba(0,0,0,0.5);
-//   ul {
-//     margin: 1em 3em;
-//   }
-//   li {
-//     list-style: none;
-//     display: inline;
-//   }
-//   a {
-//     color: $white;
-//     text-decoration: none;
-//   }
-//   :hover {
-//     color: $white;
-//     text-decoration: none;
-//   }
-//   .right-section {
-//     float: right;
-//   }
-// }
-
 // hover effect
-div.right-section {
+.right-section {
   float: right;
   ul {
     display: table;
@@ -102,17 +74,21 @@ div.right-section {
   }
   a {
     text-decoration: none;
-    color: rgba(255,255,255,1);
+    color: white;
     position: relative;
     padding: 16px 7px;
-    border-top: 1px solid rgba(255,255,255,0);
-    border-bottom: 1px solid rgba(255,255,255,0);
-    transition: padding .3s,border-color .3s;
+    border-top: 1px solid rgba(255, 255, 255, 0);
+    border-bottom: 1px solid rgba(255, 255, 255, 0);
+    transition: padding .3s, border-color .3s;
+    text-align: center;
   }
   a:focus, a:hover {
-    padding: 5px 7px;
-    border-color: rgba(255,255,255,1);
-    outline: none;
+  // padding: 5px 7px;
+  border-color: rgba(255, 255, 255, 1);
+  outline: none;
+  border-color: white;
+  outline: none;
+  text-align: center;
   }
   a::before {
     position: absolute;
@@ -121,37 +97,52 @@ div.right-section {
     bottom: 0;
     right: 0;
     max-height: 0;
-    color: rgba(255,255,255,0);
-    border-left: 1px solid rgba(255,255,255,0);
+    color: rgba(255, 255, 255, 0);
+    border-left: 1px solid rgba(255, 255, 255, 0);
     content: attr(data-text);
-    transition: max-height .3s,border-color 0s;
+    transition: max-height .3s, border-color 0s;
   }
   a::after {
     position: absolute;
     left: 0;
     bottom: 0;
     right: 0;
-    padding: 5px;
+    padding: 12px;
     max-height: 0;
-    color: rgba(255,255,255,0);
-    border-right: 1px solid rgba(255,255,255,0);
+    color: rgba(255, 255, 255, 0);
+    border-right: 1px solid rgba(255, 255, 255, 0);
     content: attr(data-text);
-    transition: max-height .3s,border-color 0s;
+    transition: max-height .3s, border-color 0s;
   }
   a:focus::before, a:hover::before, a:focus::after, a:hover::after {
     max-height: 100%;
     transition-delay: .28s;
-    border-color: rgba(255,255,255,1);
+    border-color: rgba(255, 255, 255, 1);
   }
 }
 
-// colapsing menu
+.dropdown.menu.vertical > li > a::after {
+  right: 0px;
+}
+
+.top-bar, .top-bar ul {
+    background-color: transparent;
+}
+
+// .title-bar {
+//   background: #0a0a0a;
+//   color: #fefefe;
+//   z-index: 1000;
+//   display: -webkit-inline-box;
+//   width: 100em;
+// }
+
 .top-bar {
   font-family: $body;
   font-size: 1.1rem;
   position: fixed;
   z-index: 100;
-  top: 0;
+  // top: 0;
   left: 0;
   right: 0;
   background-color: rgba(0,0,0,0.5);
@@ -161,37 +152,23 @@ div.right-section {
       width:100%;
     }
   }
-  .menu-hamburger{
-    @media only screen and (max-width: 40em) {
-      padding: .4rem;
-    }
-    float:right;
-    .menu-text{
-      color:#fff;
-    }
-  }
-
-  .input-group {
-    margin-bottom:0;
-  }
-
-  .dropdown.menu .submenu {
-    border: none;
-  }
-
-  // Arrow styling
-  .dropdown.menu>li.is-dropdown-submenu-parent>a:after{
-    border-color: #fff transparent transparent;
-  }
-
-  .is-drilldown-submenu-parent>a::after, .is-dropdown-submenu .is-dropdown-submenu-parent.opens-right>a:after{
-    border-color: transparent transparent transparent #fff;
-  }
-
-  .js-drilldown-back>a:before, .is-dropdown-submenu .is-dropdown-submenu-parent.opens-left>a:after{
-    border-color: transparent #fff transparent transparent;
-  }
 }
+
+// colapsing menu
+.dropdown.menu.vertical > li > a::after {
+  right: 0px;
+}
+// div.right-section a:focus, div.right-section a:hover {
+//   padding: 5px 7px;
+//   border-color: white;
+//   outline: none;
+//   text-align: center;
+// }
+
+// .demo-toggle-title {
+//   margin-top: 0.5rem;
+// }
+
 .columns {
   margin: 0;
   padding: 0;
